--- a/mind_heartbeat/feelings/templates/feelings/update.html
+++ b/mind_heartbeat/feelings/templates/feelings/update.html
@@ -1,6 +1,6 @@
-{% extends "_shared/base.html" %} {% block title %}Create Feeling - Mind
+{% extends "_shared/base.html" %} {% block title %}Update Feeling - Mind
 Heartbeat{% endblock %} {% block content %}
-<h1 class="text-2xl font-bold mb-8 text-center">Create Feeling</h1>
+<h1 class="text-2xl font-bold mb-8 text-center">Update Feeling</h1>
 <div class="flex justify-center items-center">
   <form
     method="post"
@@ -33,9 +33,9 @@ Heartbeat{% endblock %} {% block content %}
     </div>
     <button
       type="submit"
-      class="w-full bg-blue-500 hover:bg-blue-600 text-white font-bold py-2.5 px-4 rounded-lg shadow transition"
+      class="w-full bg-green-500 hover:bg-green-600 text-white font-bold py-2.5 px-4 rounded-lg shadow transition"
     >
-      Create
+      Update
     </button>
   </form>
 </div>
