ログインユーザとそうでないユーザで表示画面を変更

--- a/mind_heartbeat/templates/_shared/base.html
+++ b/mind_heartbeat/templates/_shared/base.html
@@ -1,20 +1,26 @@
 {% load static %}
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Mind Heartbeat{% endblock %}</title>
+    <meta name="description" content="Mind Heartbeatは気持ちを記録・可視化するサービスです。" />
+    <title>
+      {% block title %}
+        Mind Heartbeat
+      {% endblock title %}
+    </title>
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link href="{% static 'common/css/common.css' %}" rel="stylesheet" />
-    {% block extra_head %}{% endblock %}
+    {% block extra_head %}
+    {% endblock extra_head %}
   </head>
   <body>
     {% include "_shared/components/navbar.html" %}
     <div>{% include "_shared/components/message.html" %}</div>
     <div class="container mx-auto px-4 py-8">
-      {% block content %}{% endblock %}
+      {% block content %}
+      {% endblock content %}
     </div>
   </body>
 </html>
