--- a/mind_heartbeat/templates/_shared/base.html
+++ b/mind_heartbeat/templates/_shared/base.html
@@ -4,23 +4,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Mind Heartbeatは気持ちを記録・可視化するサービスです。" />
+    <meta name="description" content="Mind Heartbeatは気持ちを記録・可視化するシステムです。" />
+    <meta name="keywords" content="Mind Heartbeat,気持ち,感情,記録,可視化,メンタルヘルス" />
+    <meta name="author" content="Team5" />
     <title>
       {% block title %}
         Mind Heartbeat
       {% endblock title %}
     </title>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-    <link href="{% static 'common/css/common.css' %}" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+          rel="stylesheet"
+          integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+          crossorigin="anonymous" />
+    <link href="{% static 'common/css/mystyle.css' %}" rel="stylesheet" />
+    <link rel="stylesheet"
+          href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     {% block extra_head %}
     {% endblock extra_head %}
   </head>
   <body>
     {% include "_shared/components/navbar.html" %}
     <div>{% include "_shared/components/message.html" %}</div>
-    <div class="container mx-auto px-4 py-8">
+    <div class="container py-4">
       {% block content %}
       {% endblock content %}
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+            crossorigin="anonymous"></script>
   </body>
 </html>
