--- a/mind_heartbeat/templates/_shared/components/message.html
+++ b/mind_heartbeat/templates/_shared/components/message.html
@@ -1,9 +1,14 @@
 {% if messages %}
-<div class="container mx-auto px-4">
-  <div class="space-y-4 my-4">
+  <div class="container py-2">
     {% for message in messages %}
-    <div class="p-4 rounded-lg shadow {{ message.tags }}">{{ message }}</div>
+      <div class="alert {% if message.tags %}alert-{{ message.tags }}{% else %}alert-info{% endif %} alert-dismissible fade show my-2"
+           role="alert">
+        {{ message }}
+        <button type="button"
+                class="btn-close"
+                data-bs-dismiss="alert"
+                aria-label="Close"></button>
+      </div>
     {% endfor %}
   </div>
-</div>
 {% endif %}
