非ログインユーザのニックネームの表示を匿名に変更

--- a/mind_heartbeat/templates/_shared/components/navbar.html
+++ b/mind_heartbeat/templates/_shared/components/navbar.html
@@ -67,7 +67,7 @@
               <a class="nav-link" href="{% url 'accounts:signup' %}"><i class="bi bi-person-plus me-1"></i>ユーザ登録</a>
             </li>
             <li class="nav-item d-flex align-items-center ms-lg-3 mt-2 mt-lg-0">
-              <span class="border border-2 border-warning rounded px-2 fw-semibold text-white bg-transparent">AnonymousUser</span>
+              <span class="border border-2 border-warning rounded px-2 fw-semibold text-white bg-transparent">匿名ユーザ</span>
             </li>
           {% endif %}
         </ul>
