パンくずリストを追加しようと思ったけどやめた

--- a/mind_heartbeat/templates/_shared/base.html
+++ b/mind_heartbeat/templates/_shared/base.html
@@ -24,6 +24,7 @@
   </head>
   <body>
     {% include "_shared/components/navbar.html" %}
+    {% comment %} {% include "_shared/components/breadcrumb.html" %} {% endcomment %}
     <div>{% include "_shared/components/message.html" %}</div>
     <div class="container py-4">
       {% block content %}
