--- a/mind_heartbeat/feelings/templates/feelings/list.html
+++ b/mind_heartbeat/feelings/templates/feelings/list.html
@@ -4,7 +4,7 @@
 {% endblock title %}
 {% block content %}
   <div class="d-flex align-items-center justify-content-between mb-4 mt-5">
-    <h1 class="h3 fw-bold mb-0">感情記録一覧</h1>
+    <h1 class="h3 fw-bold mb-0">気持ちの記録一覧</h1>
     <div class="dropdown">
       <button class="btn btn-primary fw-bold dropdown-toggle"
               type="button"
@@ -17,7 +17,7 @@
           aria-labelledby="dropdownMenuButton">
         <li>
           <a class="dropdown-item" href="{% url 'feelings:create' %}">
-            <i class="bi bi-plus-square me-2"></i>気持ち作成
+            <i class="bi bi-plus-square me-2"></i>気持ちの記録作成
           </a>
         </li>
         <li>
