--- a/mind_heartbeat/templates/_shared/base.html
+++ b/mind_heartbeat/templates/_shared/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Mind Heartbeatは気持ちを記録・可視化するシステムです。" />
-    <meta name="keywords" content="Mind Heartbeat,気持ち,感情,記録,可視化,メンタルヘルス" />
+    <meta name="keywords" content="Mind Heartbeat,気持ちの記録,記録,可視化,メンタルヘルス" />
     <meta name="author" content="Team5" />
     <title>
       {% block title %}
