--- a/mind_heartbeat/feelings/templates/feelings/create.html
+++ b/mind_heartbeat/feelings/templates/feelings/create.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="d-flex justify-content-center align-items-center min-vh-85">
     <div class="card shadow w-100 mx-auto p-4 max-w-520 col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5">
-      <h1 class="h2 fw-bold mb-4 text-center">感情記録の作成</h1>
+      <h1 class="h2 fw-bold mb-4 text-center">気持ちの記録作成</h1>
       <form method="post" novalidate>
         {% csrf_token %}
         <div class="mb-4">
