--- a/mind_heartbeat/feelings/templates/feelings/delete.html
+++ b/mind_heartbeat/feelings/templates/feelings/delete.html
@@ -5,9 +5,9 @@
 {% block content %}
   <div class="d-flex justify-content-center align-items-center min-vh-85">
     <div class="card shadow w-100 mx-auto p-4 max-w-520 col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 mt-5">
-      <h1 class="h2 fw-bold mb-4 text-center text-danger">感情記録の削除</h1>
+      <h1 class="h2 fw-bold mb-4 text-center text-danger">気持ちの記録の削除</h1>
       <p class="text-center text-secondary mb-4">
-        本当にこの感情記録を削除しますか？
+        本当にこの気持ちの記録を削除しますか？
         <br>
         <span class="text-secondary small">(この操作は取り消せません)</span>
       </p>
