--- a/mind_heartbeat/feelings/templates/feelings/detail.html
+++ b/mind_heartbeat/feelings/templates/feelings/detail.html
@@ -5,7 +5,7 @@
 {% block content %}
   <div class="d-flex justify-content-center align-items-center min-vh-85">
     <div class="card shadow w-100 mx-auto p-4 max-w-520 col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 mt-5">
-      <h1 class="h2 fw-bold mb-4 text-center">感情記録の詳細</h1>
+      <h1 class="h2 fw-bold mb-4 text-center">気持ちの記録の詳細</h1>
       <div class="mb-3 d-flex flex-row align-items-center justify-content-center gap-3">
         <div class="d-flex flex-column align-items-start justify-content-center">
           <span class="{{ feeling.stamp.color }} fs-6 px-3 mb-1">{{ feeling.stamp.name }}</span>
